--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.2",
+    "@capacitor/cli": "^7.4.2",
+    "@capacitor/core": "^7.4.2",
     "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.11.0",
     "docx": "^9.5.1",
